# new-project-dbt-northwind

./: README.md  pyproject.toml
dbt_northwind/: .gitignore  README.md  dbt_project.yml
dbt_northwind/docs/: homepage.md
dbt_northwind/models/marts/: mart_orders_sumamry.sql  vendas.sql
dbt_northwind/models/marts/finance/: accrued_revenue.sql  total_revenue_1997.sql  total_revenue_per_customer.sql
dbt_northwind/models/marts/marketing/: customers_segment_to_marketing.sql  customers_to_marketing.sql  uk_clients_who_pay_more_than)1000.sql
dbt_northwind/models/marts/products/: top_10_products.sql
dbt_northwind/models/raw/crm/: raw_crm_new_table.sql
dbt_northwind/models/staging/: _crm_models.yml  crm_sources.yml  stg_crm_new_table.sql  stg_customers.sql  stg_orders.sql  stg_orders_details.sql  stg_products.sql
dbt_northwind/seeds/: new_table.csv
